# dash2

./: .containerignore  .envrc  .git-blame-ignore-revs  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Containerfile  LICENSE  Procfile  README.md  example.env  flake.nix  justfile  pyproject.toml  requirements.txt  treefmt.toml
.github/: dependabot.yml
.github/scripts/: wipe_slash_commands.py
.github/workflows/: bump-flake-lock.yml  codeql.yml  flake.yml  just-check.yml
dash/: __init__.py  __main__.py  bot.py  main.py
dash/ext/: __init__.py  core.py  ext-core.py  ext-giphy.py  ext-mediawiki.py  giphy.py  mediawiki.py  mw.py
dash/i18n/: __init__.py
dash/i18n/en-US/LC_MESSAGES/: commands.po
extras/: example.env  nixos-module.nix
extras/nix/: checks.nix  devshells.nix  module.nix  packages.nix
extras/nix/module/: ci.nix  default.nix
