[tool.poetry]
name = "dash"
version = "0.4.1"
description = "A cleanroom rewrite of Dash in Hikari."
authors = ["Tomo <68489118+Tomodachi94@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
ezgiphy = "^0.0.4"
pymediawiki = "^0.7.4"
hikari-lightbulb = "^3.0.0a3"
hikari = "^2.0.0dev126"

[tool.poetry.scripts]
dash = "dash.__main__:main"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
[[tool.mypy.overrides]]
module = [
    "ezgiphy"
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
