# SPDX-FileCopyrightText: 2024 Tomodachi94
#
# SPDX-License-Identifier: MIT

[tool.poetry]
name = "dash"
version = "0.4.1"
description = "A cleanroom rewrite of Dash in Hikari."
authors = ["Tomo <68489118+Tomodachi94@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
ezgiphy = "^0.0.4"
pymediawiki = "^0.7.5"
hikari-lightbulb = { version = "^3.0.0a12", extras = ["localization"] }
hikari = "^2.0.0"

[tool.poetry.scripts]
dash = "dash.__main__:main"

[tool.ruff]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "N"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
[[tool.mypy.overrides]]
module = ["ezgiphy"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
