# SPDX-FileCopyrightText: 2024 Tomodachi94
#
# SPDX-License-Identifier: MIT
#:schema https://www.schemastore.org/pyproject.json

[project]
name = "dash"
version = "0.4.1"
description = "A cleanroom rewrite of Dash in Hikari."
authors = [{ name = "Tomodachi94" }]
license = "MIT"
dynamic = ["readme"]
requires-python = ">=3.10.0,<3.13"
dependencies = [
  "ezgiphy>=0.0.4,<0.1.0",
  "pymediawiki>=0.7.4,<0.8.0",
  "hikari-lightbulb[localization]>=3.0.0a12,<3.2.3",
  "hikari>=2.0.0,<3.0.0",
]

[project.scripts]
dash = "dash.__main__:main"

[tool.ruff]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "N"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
[[tool.mypy.overrides]]
module = ["ezgiphy"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
